# atmosphere-bac

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json  compile_shaders_linux.sh  compile_shaders_windows.bat  imgui.ini  premake5.lua  readme.md
dependencies/GLFW/: README.md
dependencies/GLFW/lib-vc2012/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
dependencies/GLFW/lib-vc2013/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
dependencies/GLFW/lib-vc2015/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
dependencies/GLFW/lib-vc2017/: glfw3.lib  glfw3_mt.lib
dependencies/GLFW/lib-vc2019/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
shaders/: aerialPerspectiveLUT.glsl  common_func.glsl  draw_AE_perspective.frag  draw_clouds.glsl  draw_far_sky.glsl  final_composition.frag  histogram_generate.glsl  histogram_sum.glsl  multiscatteringLUT.glsl  screen_triangle.glsl  skyviewLUT.glsl  terrain.frag  terrain.vert  transmittanceLUT.glsl
shaders/buffers/: atmosphere_param_buff.glsl  clouds_param_buffer.glsl  common_param_buff.glsl  post_process_param_buff.glsl
shaders/noise/: normalize_noise_3D.glsl  worley_noise_3D.glsl
source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Main.cpp  Primitives.h  application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  primitives.hpp
source/model/: SkyModel.cpp  sky_model.cpp  sky_model.hpp
source/noise/: WorleyNoise.cpp  WorleyNoise.h  worley_noise.cpp  worley_noise.hpp
source/vulkan/: BufferDefines.h  ImGuiImpl.cpp  ImGuiImpl.h  Renderer.cpp  Renderer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  buffer_defines.hpp  imgui_impl.cpp  imgui_impl.hpp  renderer.cpp  renderer.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_debug.cpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
(+1 files in other folders)
